# android-minui

./: graphics.c  graphics.h  graphics_adf.c  graphics_adf.c.disabled  graphics_drm.c  graphics_fbdev.c  meson.build  meson_options.txt  minui.h  resources.c
debian/: control  copyright  libminui0.shlibs
